@@ -241,7 +241,8 @@ l10n_info <- function() .Internal(l10n_info())
 
 iconv <- function(x, from = "", to = "", sub = NA, mark = TRUE, toRaw = FALSE)
 {
-    if(!is.character(x)) x <- as.character(x)
+    if(! (is.character(x) || (is.list(x) && is.null(oldClass(x)))))
+        x <- as.character(x)
     .Internal(iconv(x, from, to, as.character(sub), mark, toRaw))
 }
 
